--- a/tribute.html
+++ b/tribute.html
@@ -7,5 +7,8 @@
   </head>
   <body id="main">
     <h1 id="title">Tribute to Microverse</h1>
+    <div id="img-div">
+      <img src="..." alt="" id="image"/>
+    </div>
   </body>
 </html>
