--- a/tribute.html
+++ b/tribute.html
@@ -3,12 +3,21 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>Tribute to Microverse</title>
   </head>
   <body id="main">
     <h1 id="title">Tribute to Microverse</h1>
-    <div id="img-div">
-      <img src="..." alt="" id="image"/>
-    </div>
+    <figure id="img-div">
+
+
+      <img src="https://assets-global.website-files.com/5dbb30f00775d4c32191a4df/5e30ae0c4081806a8f50a7df_horizontal-logo-white-p-500.png" alt="" id="image"/>
+        <figcaption id="img-caption">Your Global Career Starts Here.
+                          From Anywhere.
+                          Become a remote software developer, no matter where you're from. Learn with Microverse and connect to life-changing opportunities.
+                          Don’t pay anything until you get a job!
+        </figcaption>
+    </figure>
+    <p id="tribute-info">Your Microverse experience centers around accountability, support, and community as you learn in an environment that mimics a real-world remote workspace.</p>
   </body>
 </html>
