--- a/tribute.html
+++ b/tribute.html
@@ -18,6 +18,9 @@
                           Don’t pay anything until you get a job!
         </figcaption>
     </figure>
-    <p id="tribute-info">Your Microverse experience centers around accountability, support, and community as you learn in an environment that mimics a real-world remote workspace.</p>
+    <p id="tribute-info">Your Microverse experience centers around accountability, support, and community as you 
+      learn in an environment that mimics a real-world remote workspace.</p>
+    
+      <a href="#" target="_blank" rel="noopener noreferrer" id="tribute-link">Useful Link</a> 
   </body>
 </html>
