--- a/tribute.html
+++ b/tribute.html
@@ -18,9 +18,11 @@
                           Don’t pay anything until you get a job!
         </figcaption>
     </figure>
-    <p id="tribute-info">Your Microverse experience centers around accountability, support, and community as you 
+    <p id="tribute-info">Your Microverse experience centers around accountability, support, and community as you
       learn in an environment that mimics a real-world remote workspace.</p>
-    
-      <a href="#" target="_blank" rel="noopener noreferrer" id="tribute-link">Useful Link</a> 
+
+      <a href="#" target="_blank" rel="noopener noreferrer" id="tribute-link">Useful Link</a>
+        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
   </body>
 </html>
